--- a/help.html
+++ b/help.html
@@ -14,34 +14,102 @@
   --max:1320px;
   --nav-h:72px;
   --accent: linear-gradient(135deg,#ff66c1,#ff9ab0 40%,#ffd18c 80%);
-  --bg:#000;
   --glass: rgba(255,255,255,0.04);
 }
 
 /* Reset */
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{height:100%;scroll-behavior:smooth}
+
+/* FULL PAGE BACKGROUND */
 body{
-  font-family:Inter, sans-serif;background:var(--bg);color:#fff;-webkit-font-smoothing:antialiased;overflow-x:hidden;
+  font-family:Inter, sans-serif;
+  color:#fff;
+  -webkit-font-smoothing:antialiased;
+  overflow-x:hidden;
+
+  background-color:#000;
+  background-image:url("https://images.unsplash.com/photo-1716326386093-d80fa73692a6?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-position:center;
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-attachment:fixed;
+}
+
+/* MOBILE BG OVERRIDE */
+@media (max-width:780px){
+  body{
+    background-image:url("https://images.unsplash.com/photo-1668624384628-38c90f9e5783?q=80&w=654&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  }
 }
 
 /* NAV (wrap is relative so dropdown can position under nav) */
 .nav-wrap{position:fixed;top:18px;left:0;right:0;display:flex;justify-content:center;z-index:1200}
-.nav{width:94%;max-width:var(--max);height:var(--nav-h);background:rgba(255,255,255,0.06);backdrop-filter:blur(14px);display:flex;align-items:center;justify-content:space-between;padding:10px 26px;border-radius:16px;box-shadow:0 20px 60px rgba(0,0,0,0.55);position:relative}
+.nav{
+  width:94%;
+  max-width:var(--max);
+  height:var(--nav-h);
+  background:rgba(0,0,0,0.55);
+  backdrop-filter:blur(14px);
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:10px 26px;
+  border-radius:16px;
+  box-shadow:0 20px 60px rgba(0,0,0,0.75);
+  position:relative
+}
 .brand-wrap{display:flex;align-items:center;gap:12px}
 .brand-logo{width:48px;height:48px;border-radius:50%;object-fit:cover}
-.brand{font-family:'Space Grotesk';font-weight:800;background:var(--accent);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-size:1.1rem}
+.brand{
+  font-family:'Space Grotesk';
+  font-weight:800;
+  background:var(--accent);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  font-size:1.1rem
+}
 
 /* Desktop nav links */
 nav.primary{display:flex;gap:34px;align-items:center}
-nav.primary a{font-family:'Space Grotesk';font-weight:700;color:white;text-decoration:none;position:relative;padding:4px}
+nav.primary a{
+  font-family:'Space Grotesk';
+  font-weight:700;
+  color:white;
+  text-decoration:none;
+  position:relative;
+  padding:4px
+}
 nav.primary a:hover{transform:translateY(-2px)}
-nav.primary a::after{content:"";position:absolute;bottom:-6px;left:0;height:3px;width:0;border-radius:4px;background:linear-gradient(90deg,#ff66c1,#ffd18c);transition:width .3s}
+nav.primary a::after{
+  content:"";
+  position:absolute;
+  bottom:-6px;
+  left:0;
+  height:3px;
+  width:0;
+  border-radius:4px;
+  background:linear-gradient(90deg,#ff66c1,#ffd18c);
+  transition:width .3s
+}
 nav.primary a:hover::after{width:100%}
 
 /* Hamburger — 2 line */
-.menu-btn{width:26px;height:16px;display:none;flex-direction:column;justify-content:space-between;cursor:pointer}
-.menu-line{height:3px;width:100%;background:white;border-radius:6px;transition:transform .28s cubic-bezier(.22,.9,.28,1)}
+.menu-btn{
+  width:26px;
+  height:16px;
+  display:none;
+  flex-direction:column;
+  justify-content:space-between;
+  cursor:pointer
+}
+.menu-line{
+  height:3px;
+  width:100%;
+  background:white;
+  border-radius:6px;
+  transition:transform .28s cubic-bezier(.22,.9,.28,1)
+}
 .menu-btn.active .menu-line:nth-child(1){transform:translateY(6px) rotate(45deg)}
 .menu-btn.active .menu-line:nth-child(2){transform:translateY(-6px) rotate(-45deg)}
 
@@ -51,71 +119,209 @@ nav.primary a:hover::after{width:100%}
   left: 50%;
   transform: translateX(-50%);
   top: calc(var(--nav-h) + 12px);
-  width: calc(100% - 56px); /* slightly inset */
+  width: calc(100% - 56px);
   max-width: 960px;
-  background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
+  background: linear-gradient(180deg, rgba(0,0,0,0.85), rgba(0,0,0,0.8));
   border-radius: 14px;
   padding: 18px 22px;
-  box-shadow: 0 30px 80px rgba(0,0,0,0.55);
-  border: 1px solid rgba(255,255,255,0.05);
+  box-shadow: 0 30px 80px rgba(0,0,0,0.85);
+  border: 1px solid rgba(255,255,255,0.12);
   display: none;
   z-index: 1300;
   backdrop-filter: blur(10px);
   text-align:center;
 }
 .nav-dropdown .nav-links{display:flex;flex-direction:column;gap:14px;align-items:center}
-.nav-dropdown .nav-links a{font-family:'Space Grotesk';font-weight:800;color:white;text-decoration:none;font-size:1.05rem;letter-spacing:1px}
+.nav-dropdown .nav-links a{
+  font-family:'Space Grotesk';
+  font-weight:800;
+  color:white;
+  text-decoration:none;
+  font-size:1.05rem;
+  letter-spacing:1px
+}
 
 /* MAIN */
 main{padding-top:calc(var(--nav-h) + 40px)}
 
-/* HERO */
-.hero{min-height:80vh;display:flex;align-items:center;justify-content:center;position:relative;text-align:center;background:url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=2200&q=80') center/cover no-repeat}
-.hero::before{content:'';position:absolute;inset:0;background:linear-gradient(120deg,rgba(0,0,0,.6),rgba(0,0,0,.45))}
+/* HERO – no banner bg, just content on top of page bg */
+.hero{
+  min-height:80vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  position:relative;
+  text-align:center;
+}
 .hero-inner{position:relative;z-index:2;max-width:920px;padding:0 20px}
-.hero h1{font-family:'Space Grotesk';font-weight:800;font-size:clamp(2.4rem,5vw,3.6rem);background:var(--accent);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
-.hero p{font-size:1.1rem;margin-top:14px}
+.hero h1{
+  font-family:'Space Grotesk';
+  font-weight:800;
+  font-size:clamp(2.4rem,5vw,3.6rem);
+  background:var(--accent);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+.hero p{
+  font-size:1.1rem;
+  margin-top:14px;
+}
 
 /* SECTIONS */
-.section{max-width:var(--max);margin:0 auto;padding:92px 20px;text-align:center}
-.title{font-family:'Space Grotesk';font-weight:800;font-size:2.5rem;background:var(--accent);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:10px;opacity:0;transform:translateY(30px)}
-.desc{max-width:760px;margin:0 auto 40px;font-size:1.05rem;line-height:1.75;opacity:0;transform:translateY(20px)}
+.section{
+  max-width:var(--max);
+  margin:0 auto;
+  padding:92px 20px;
+  text-align:center;
+}
+.title{
+  font-family:'Space Grotesk';
+  font-weight:800;
+  font-size:2.5rem;
+  background:var(--accent);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  margin-bottom:10px;
+  opacity:0;
+  transform:translateY(30px)
+}
+.desc{
+  max-width:760px;
+  margin:0 auto 40px;
+  font-size:1.05rem;
+  line-height:1.75;
+  opacity:0;
+  transform:translateY(20px)
+}
 
 /* CARDS (desktop grid) */
-.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:28px}
-.card{background:var(--glass);border-radius:18px;overflow:hidden;border:1px solid rgba(255,255,255,0.05);box-shadow:0 20px 60px rgba(0,0,0,0.6);opacity:0;transform:translateY(30px)}
-.media{width:100%;aspect-ratio:16/10;display:flex;align-items:center;justify-content:center;background:#050505;overflow:hidden}
-.media img{width:100%;height:100%;object-fit:cover;transition:transform 1s ease}
+.cards{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:28px;
+}
+
+/* UPDATED GLASSY BLACK CARDS */
+.card{
+  background: rgba(0,0,0,0.45);
+  backdrop-filter: blur(12px);
+  border-radius:18px;
+  overflow:hidden;
+  border:1px solid rgba(255,255,255,0.14);
+  box-shadow:0 20px 60px rgba(0,0,0,0.85);
+  opacity:0;
+  transform:translateY(30px);
+}
+
+/* UPDATED DARK GLASS MEDIA BACKGROUND */
+.media{
+  width:100%;
+  aspect-ratio:16/10;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background: rgba(0,0,0,0.55);
+  overflow:hidden
+}
+
+.media img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  transition:transform 1s ease
+}
 .card:hover .media img{transform:scale(1.06)}
+
 .body{padding:20px}
-.title-sub{font-family:'Space Grotesk';font-weight:800;font-size:1.15rem;background:var(--accent);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:8px}
+.title-sub{
+  font-family:'Space Grotesk';
+  font-weight:800;
+  font-size:1.15rem;
+  background:var(--accent);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  margin-bottom:8px
+}
 .kicker{font-size:.96rem;line-height:1.6;opacity:.95}
 
-/* MOBILE: slider + smaller image handling */
+/* MOBILE */
 @media (max-width:780px){
   nav.primary{display:none}
   .menu-btn{display:flex}
-  .hero{min-height:60vh}
 
-  .cards{
-    display:flex;overflow-x:auto;gap:16px;padding:8px;scroll-snap-type:x mandatory;scrollbar-width:none;
+  .hero{
+    min-height:70vh;
   }
-  .cards::-webkit-scrollbar{display:none}
 
-  .card{min-width:68%;flex-shrink:0;scroll-snap-align:center;border-radius:14px;display:flex;flex-direction:column}
-  .media{height:180px;aspect-ratio:auto;padding:8px}
-  .media img{height:100%;width:auto;object-fit:contain;border-radius:10px}
-  .body{padding:12px}
+  .section{
+    padding:72px 18px;
+  }
+
+  /* 3D STACKED SWIPE LAYOUT FOR CARDS */
+  .cards{
+    position:relative;
+    max-width:100%;
+    padding:38px 0 18px;
+    perspective:1200px;
+    display:block; /* override grid on mobile */
+  }
+
+  .card{
+    position:absolute;
+    left:50%;
+    top:0;
+    width:80%;
+    max-width:320px;
+    min-width:0;
+    margin:0;
+    border-radius:16px;
+    transform:none;
+    opacity:1; /* JS will control real opacity */
+    transform-origin:center center;
+    transform-style:preserve-3d;
+    transition:transform .4s cubic-bezier(.22,.9,.28,1),opacity .3s ease;
+  }
+
+  .media{
+    height:200px;
+    aspect-ratio:auto;
+    padding:0;
+    background: rgba(0,0,0,0.55);
+  }
+
+  .media img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    border-radius:14px;
+  }
+
+  .body{padding:14px 14px 18px}
   .title-sub{font-size:1.05rem}
   .kicker{font-size:.95rem}
 
-  /* nav-dropdown uses full nav width but appears under nav; on mobile it will be visible */
-  .nav-dropdown{width:calc(100% - 40px);left:50%;transform:translateX(-50%);top:calc(var(--nav-h) + 12px)}
+  .nav-dropdown{
+    width:calc(100% - 40px);
+    left:50%;
+    transform:translateX(-50%);
+    top:calc(var(--nav-h) + 12px)
+  }
 }
 
 /* FOOTER */
-.sep{height:2px;max-width:var(--max);margin:60px auto;background:linear-gradient(90deg,#0000,#ff66c1 20%,#ffd18c 80%,#0000);opacity:.08}
-footer{padding:40px 20px;text-align:center;color:rgba(255,255,255,0.85)}
+.sep{
+  height:2px;
+  max-width:var(--max);
+  margin:60px auto;
+  background:linear-gradient(90deg,#0000,#ff66c1 20%,#ffd18c 80%,#0000);
+  opacity:.14
+}
+footer{
+  padding:40px 20px;
+  text-align:center;
+  color:rgba(255,255,255,0.9);
+  text-shadow:0 0 8px rgba(0,0,0,0.65);
+}
 </style>
 </head>
 
@@ -131,6 +337,7 @@ footer{padding:40px 20px;text-align:center;color:rgba(255,255,255,0.85)}
 
     <nav class="primary">
       <a href="landing.html">HOME</a>
+      <a href="service.html">SERVICES</a>
       <a href="contact.html">CONTACT</a>
     </nav>
 
@@ -139,10 +346,10 @@ footer{padding:40px 20px;text-align:center;color:rgba(255,255,255,0.85)}
       <div class="menu-line"></div>
     </div>
 
-    <!-- NAV DROPDOWN (hidden by default) -->
     <div class="nav-dropdown" id="navDropdown" aria-hidden="true" role="menu">
       <div class="nav-links">
         <a href="landing.html" class="drop-link">HOME</a>
+        <a href="service.html">SERVICES</a>
         <a href="contact.html" class="drop-link">CONTACT</a>
       </div>
     </div>
@@ -350,32 +557,64 @@ footer{padding:40px 20px;text-align:center;color:rgba(255,255,255,0.85)}
 /* GSAP + ScrollTrigger */
 gsap.registerPlugin(ScrollTrigger);
 
+const isMobile = window.innerWidth <= 780;
+
 /* Titles + desc */
 gsap.utils.toArray(".section").forEach(section=>{
   const t = section.querySelector(".title");
   const d = section.querySelector(".desc");
   if(!t||!d) return;
-  gsap.timeline({scrollTrigger:{trigger:section,start:"top 80%",once:true}})
-    .to(t,{y:0,opacity:1,duration:.7,ease:"power3.out"})
-    .to(d,{y:0,opacity:1,duration:.7,ease:"power3.out"},"-=.45");
+  gsap.timeline({
+    scrollTrigger:{
+      trigger:section,
+      start:"top 80%",
+      once:true
+    }
+  })
+  .to(t,{y:0,opacity:1,duration:.7,ease:"power3.out"})
+  .to(d,{y:0,opacity:1,duration:.7,ease:"power3.out"},"-=.45");
 });
 
-/* Card entrance */
-gsap.utils.toArray(".cards").forEach(container=>{
-  gsap.fromTo(container.children,
-    {opacity:0,y:32},
-    {opacity:1,y:0,duration:0.9,ease:"power3.out",stagger:0.16,scrollTrigger:{trigger:container,start:"top 82%",once:true}}
-  );
-});
+/* Card entrance (DESKTOP ONLY) */
+if(!isMobile){
+  gsap.utils.toArray(".cards").forEach(container=>{
+    gsap.fromTo(container.children,
+      {opacity:0,y:32},
+      {
+        opacity:1,
+        y:0,
+        duration:0.9,
+        ease:"power3.out",
+        stagger:0.16,
+        scrollTrigger:{
+          trigger:container,
+          start:"top 82%",
+          once:true
+        }
+      }
+    );
+  });
+}
 
 /* Parallax image scale on larger screens */
 gsap.utils.toArray(".media img").forEach(img=>{
   if(window.innerWidth > 780){
-    gsap.fromTo(img,{scale:1.08},{scale:1,scrollTrigger:{trigger:img.closest(".card"),start:"top bottom",end:"bottom top",scrub:true}});
+    gsap.fromTo(img,
+      {scale:1.08},
+      {
+        scale:1,
+        scrollTrigger:{
+          trigger:img.closest(".card"),
+          start:"top bottom",
+          end:"bottom top",
+          scrub:true
+        }
+      }
+    );
   }
 });
 
-/* NAV DROPDOWN logic (appears under nav; fade + slide down) */
+/* NAV DROPDOWN logic */
 const ham = document.getElementById('hamburger');
 const dropdown = document.getElementById('navDropdown');
 let dropdownOpen = false;
@@ -386,17 +625,28 @@ function openDropdown(){
   dropdown.style.display = 'block';
   dropdown.setAttribute('aria-hidden','false');
   gsap.killTweensOf(dropdown);
-  gsap.fromTo(dropdown, {y:-8, opacity:0}, {y:0, opacity:1, duration:0.28, ease:'power2.out'});
+  gsap.fromTo(dropdown,
+    {y:-8, opacity:0},
+    {y:0, opacity:1, duration:0.28, ease:'power2.out'}
+  );
 }
 
 function closeDropdown(){
   dropdownOpen = false;
   ham.classList.remove('active');
   gsap.killTweensOf(dropdown);
-  gsap.to(dropdown, {y:-8, opacity:0, duration:0.2, ease:'power2.in', onComplete: ()=> {
-    dropdown.style.display = 'none';
-    dropdown.setAttribute('aria-hidden','true');
-  }});
+  gsap.to(dropdown,
+    {
+      y:-8,
+      opacity:0,
+      duration:0.2,
+      ease:'power2.in',
+      onComplete: ()=>{
+        dropdown.style.display = 'none';
+        dropdown.setAttribute('aria-hidden','true');
+      }
+    }
+  );
 }
 
 /* toggle on hamburger click */
@@ -407,7 +657,6 @@ ham.addEventListener('click', (e)=>{
 
 /* close when clicking outside nav/dropdown */
 document.addEventListener('click', (e)=>{
-  // if click is not inside nav or dropdown, close
   const navEl = document.getElementById('mainNav');
   if(dropdownOpen && !navEl.contains(e.target)){
     closeDropdown();
@@ -426,8 +675,127 @@ document.querySelectorAll('.drop-link').forEach(a=>{
 
 /* Accessibility: Enter / Space on hamburger */
 ham.addEventListener('keydown', e=>{
-  if(e.key === 'Enter' || e.key === ' '){ e.preventDefault(); ham.click(); }
+  if(e.key === 'Enter' || e.key === ' '){
+    e.preventDefault();
+    ham.click();
+  }
 });
+
+/* ===========================
+   3D STACKED SWIPE (MOBILE)
+   Option B — all cards visible, stack shifts left/right
+   =========================== */
+if(isMobile){
+  setupStackedSwipe();
+}
+
+function setupStackedSwipe(){
+  const containers = document.querySelectorAll(".cards");
+  containers.forEach(container => {
+    const cards = Array.from(container.children);
+    if(cards.length <= 1) return;
+
+    // Ensure base styles for mobile stack
+    container.style.position = "relative";
+    container.style.perspective = "1200px";
+
+    cards.forEach(card => {
+      card.style.position = "absolute";
+      card.style.left = "50%";
+      card.style.top = "0";
+      card.style.transformStyle = "preserve-3d";
+    });
+
+    let centerIndex = Math.floor(cards.length / 2);
+
+    function updateStack(){
+      let maxHeight = 0;
+
+      cards.forEach((card, i) => {
+        const offset = i - centerIndex;          // negative = left, positive = right
+        const absOffset = Math.abs(offset);
+
+        const translateX = offset * 26;          // horizontal spread
+        const translateY = absOffset * 6;        // slight drop for depth
+        const translateZ = -absOffset * 40;      // push back in Z
+        const rotateY   = offset * -8;          // rotate towards user
+        const scale     = 1 - absOffset * 0.04; // slightly smaller in the back
+
+        const visible = absOffset <= 3;         // hide very far ones on big stacks
+
+        card.style.zIndex = (cards.length - absOffset).toString();
+        card.style.opacity = visible ? "1" : "0";
+        card.style.transform =
+          "translate(-50%,0) " +
+          "translateX(" + translateX + "px) " +
+          "translateY(" + translateY + "px) " +
+          "translateZ(" + translateZ + "px) " +
+          "scale(" + scale + ") " +
+          "rotateY(" + rotateY + "deg)";
+
+        const h = card.offsetHeight;
+        if(h > maxHeight) maxHeight = h;
+      });
+
+      if(maxHeight > 0){
+        container.style.height = (maxHeight + 32) + "px";
+      }
+    }
+
+    updateStack();
+
+    // Recalculate when images load (so height is correct)
+    cards.forEach(card=>{
+      const img = card.querySelector("img");
+      if(img){
+        img.addEventListener("load", () => {
+          updateStack();
+        });
+      }
+    });
+
+    let startX = 0;
+    let deltaX = 0;
+    let isDragging = false;
+
+    function onStart(e){
+      if(!e.touches || e.touches.length === 0) return;
+      isDragging = true;
+      startX = e.touches[0].clientX;
+      deltaX = 0;
+    }
+
+    function onMove(e){
+      if(!isDragging) return;
+      if(!e.touches || e.touches.length === 0) return;
+      deltaX = e.touches[0].clientX - startX;
+    }
+
+    function onEnd(){
+      if(!isDragging) return;
+      isDragging = false;
+
+      const threshold = 50; // swipe sensitivity
+      if(Math.abs(deltaX) > threshold){
+        if(deltaX < 0 && centerIndex < cards.length - 1){
+          // swipe left → move stack to show next card on the right
+          centerIndex++;
+          updateStack();
+        }else if(deltaX > 0 && centerIndex > 0){
+          // swipe right → move stack back
+          centerIndex--;
+          updateStack();
+        }
+      }
+
+      deltaX = 0;
+    }
+
+    container.addEventListener("touchstart", onStart, {passive:true});
+    container.addEventListener("touchmove", onMove, {passive:true});
+    container.addEventListener("touchend", onEnd);
+  });
+}
 </script>
 
 </body>
